--- a/module-0/basics.ipynb
+++ b/module-0/basics.ipynb
@@ -66,12 +66,14 @@
    "outputs": [],
    "source": [
     "%%capture --no-stderr\n",
-    "%pip install --quiet -U langchain_openai langchain_core langchain_community langchain-tavily"
+    "# Note: Due to SSL issues, packages were pre-installed via terminal\n",
+    "# If you need to install manually, use:\n",
+    "# pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org langchain-google-genai langchain_core langchain_community langchain-tavily"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c2a15227",
    "metadata": {},
    "outputs": [],
@@ -82,7 +84,7 @@
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "_set_env(\"GOOGLE_API_KEY\")"
    ]
   },
   {
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e19a54d3",
    "metadata": {
     "editable": true,
@@ -119,9 +121,11 @@
    },
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "gpt4o_chat = ChatOpenAI(model=\"gpt-4o\", temperature=0)\n",
-    "gpt35_chat = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "# Using Gemini models instead of OpenAI\n",
+    "gpt4o_chat = ChatGoogleGenerativeAI(model=\"gemini-2.5-pro\", temperature=0)\n",
+    "gpt35_chat = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", temperature=0)"
    ]
   },
   {
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b1280e1b",
    "metadata": {
     "editable": true,
@@ -158,10 +162,10 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Hello! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 11, 'total_tokens': 20, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_eb3c3cb84d', 'id': 'chatcmpl-CSWGCGbWLCLdHUAOh9pkNFWl1MWf4', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--529fb9c7-f813-47a7-9662-dea715d4be28-0', usage_metadata={'input_tokens': 11, 'output_tokens': 9, 'total_tokens': 20, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content=\"Hello there! The classic programmer's greeting. It's a good sign that everything is up and running.\\n\\nHow can I help you today?\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-pro', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--55e68c4c-4de5-4a50-9188-bf8d1714d774-0', usage_metadata={'input_tokens': 3, 'output_tokens': 1035, 'total_tokens': 1038, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 1004}})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,17 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f27c6c9a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Hello! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 9, 'total_tokens': 18, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_cbf1785567', 'id': 'chatcmpl-CSWGCXlVYTEWoHAFm3GXIIgUO1gCb', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--43b070a6-7676-4aa1-984c-c0cd43d45c1e-0', usage_metadata={'input_tokens': 9, 'output_tokens': 9, 'total_tokens': 18, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content=\"Hello there! The classic programmer's greeting.\\n\\nHow can I help you today?\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-pro', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--1376db11-576e-44f0-b697-71589d1300ee-0', usage_metadata={'input_tokens': 3, 'output_tokens': 995, 'total_tokens': 998, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 977}})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fdc2f0ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Hello! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 9, 'total_tokens': 18, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-CSWGDY5KePqihRcWDX3IGEZfSoyld', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--f7963c03-f8b2-4eba-bc7f-4d58520fa661-0', usage_metadata={'input_tokens': 9, 'output_tokens': 9, 'total_tokens': 18, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content=\"Hello, World!\\n\\nThat's a classic! It's great to hear from you.\\n\\nHow can I help you today? Do you have a question, a project in mind, or just want to chat?\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--285c6e54-fbf5-4c15-89bf-b641ca5fe3c1-0', usage_metadata={'input_tokens': 3, 'output_tokens': 159, 'total_tokens': 162, 'input_token_details': {'cache_read': 0}, 'output_token_details': {'reasoning': 114}})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "091dff13",
    "metadata": {},
    "outputs": [],
@@ -267,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "52d69da9",
    "metadata": {},
    "outputs": [],
@@ -282,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "d06f87e6",
    "metadata": {},
    "outputs": [
@@ -292,21 +296,21 @@
        "[{'url': 'https://www.datacamp.com/tutorial/langgraph-tutorial',\n",
        "  'title': 'LangGraph Tutorial: What Is LangGraph and How to Use It?',\n",
        "  'content': 'LangGraph is a library within the LangChain ecosystem that provides a framework for defining, coordinating, and executing multiple LLM agents (or chains) in a structured and efficient manner. By managing the flow of data and the sequence of operations, LangGraph allows developers to focus on the high-level logic of their applications rather than the intricacies of agent coordination. Whether you need a chatbot that can handle various types of user requests or a multi-agent system that performs complex tasks, LangGraph provides the tools to build exactly what you need. LangGraph significantly simplifies the development of complex LLM applications by providing a structured framework for managing state and coordinating agent interactions.',\n",
-       "  'score': 0.9581988,\n",
+       "  'score': 0.9999697,\n",
+       "  'raw_content': None},\n",
+       " {'url': 'https://www.shakudo.io/integrations/langgraph',\n",
+       "  'title': 'What is LangGraph? Docs, Demo and How to Deploy - Shakudo',\n",
+       "  'content': 'LangGraph is a framework for building stateful, multi-agent applications using large language models (LLMs). It extends the LangChain',\n",
+       "  'score': 0.99995804,\n",
        "  'raw_content': None},\n",
        " {'url': 'https://www.geeksforgeeks.org/machine-learning/what-is-langgraph/',\n",
        "  'title': 'What is LangGraph? - GeeksforGeeks',\n",
        "  'content': 'LangGraph is an open-source framework built by LangChain that streamlines the creation and management of AI agent workflows. By treating workflows as interconnected nodes and edges, LangGraph offers a scalable, transparent and developer-friendly way to design advanced AI systems ranging from simple chatbots to multi-agent system. * ****Enhanced decision-making:**** Models relationships between nodes, enabling AI agents to learn from past actions and feedback. * ****langgraph:**** Framework for building graph-based AI workflows. * Build the workflow graph using LangGraph, adding nodes for classification and response, connecting them with edges and compiling the app. * Send each input through the workflow graph and returns the bot’s response, either a greeting or an AI-powered answer.',\n",
-       "  'score': 0.95067275,\n",
-       "  'raw_content': None},\n",
-       " {'url': 'https://langchain-ai.github.io/langgraph/concepts/why-langgraph/',\n",
-       "  'title': 'Learn LangGraph basics - Overview',\n",
-       "  'content': 'Trusted by companies shaping the future of agents— including Klarna, Replit, Elastic, and more— LangGraph is a low-level orchestration framework and runtime for building, managing, and deploying long-running, stateful agents. LangGraph is very low-level, and focused entirely on agent **orchestration**. Before using LangGraph, we recommend you familiarize yourself with some of the components used to build agents, starting with models and tools. LangGraph is focused on the underlying capabilities important for agent orchestration: durable execution, streaming, human-in-the-loop, and more. LangGraph provides low-level supporting infrastructure for *any* long-running, stateful workflow or agent. While LangGraph can be used standalone, it also integrates seamlessly with any LangChain product, giving developers a full suite of tools for building agents. Contains agent abstractions built on top of LangGraph.',\n",
-       "  'score': 0.94911116,\n",
+       "  'score': 0.99993944,\n",
        "  'raw_content': None}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,19 +318,11 @@
    "source": [
     "search_docs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a7545f4-aeb7-4b03-91f5-df3e021fe960",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lc-academy-env",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
