Complete module-2: Update notebooks to use Google Gemini

--- a/module-2/chatbot-external-memory.ipynb
+++ b/module-2/chatbot-external-memory.ipynb
@@ -57,13 +57,13 @@
    },
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph-checkpoint-sqlite langchain_core langgraph langchain_openai"
+    "# %%capture --no-stderr\n",
+    "# %pip install --quiet -U langgraph-checkpoint-sqlite langchain_core langgraph langchain_openai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e10c4d4",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "_set_env(\"GOOGLE_API_KEY\")"
    ]
   },
   {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fae15402-17ae-4e89-8ecf-4c89e08b22fe",
    "metadata": {
     "editable": true,
@@ -125,13 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "58339167-920c-4994-a0a7-0a9c5d4f7cf7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# pull file if it doesn't exist and connect to local db\n",
-    "!mkdir -p state_db && [ ! -f state_db/example.db ] && wget -P state_db https://github.com/langchain-ai/langchain-academy/raw/main/module-2/state_db/example.db\n",
+    "#!mkdir -p state_db && [ ! -f state_db/example.db ] && wget -P state_db https://github.com/langchain-ai/langchain-academy/raw/main/module-2/state_db/example.db\n",
     "\n",
     "db_path = \"state_db/example.db\"\n",
     "conn = sqlite3.connect(db_path, check_same_thread=False)"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3c7736b6-a750-48f8-a838-8e7616b12250",
    "metadata": {
     "editable": true,
@@ -165,20 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dc414e29-2078-41a0-887c-af1a6a3d72c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing_extensions import Literal\n",
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_core.messages import SystemMessage, HumanMessage, RemoveMessage\n",
     "\n",
     "from langgraph.graph import END\n",
     "from langgraph.graph import MessagesState\n",
     "\n",
     "\n",
-    "model = ChatOpenAI(model=\"gpt-4o\",temperature=0)\n",
+    "model = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash-lite\", google_api_key=os.environ.get(\"GOOGLE_API_KEY\"))\n",
     "\n",
     "class State(MessagesState):\n",
     "    summary: str\n",
@@ -257,7 +258,32 @@
    "execution_count": null,
    "id": "e867fd95-91eb-4ce1-82fc-bb72d611a96d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "config:\n",
+      "  flowchart:\n",
+      "    curve: linear\n",
+      "---\n",
+      "graph TD;\n",
+      "\t__start__([<p>__start__</p>]):::first\n",
+      "\tconversation(conversation)\n",
+      "\tsummarize_conversation(summarize_conversation)\n",
+      "\t__end__([<p>__end__</p>]):::last\n",
+      "\t__start__ --> conversation;\n",
+      "\tconversation -.-> __end__;\n",
+      "\tconversation -.-> summarize_conversation;\n",
+      "\tsummarize_conversation --> __end__;\n",
+      "\tclassDef default fill:#f2f0ff,line-height:1.2\n",
+      "\tclassDef first fill-opacity:0\n",
+      "\tclassDef last fill:#bfb6fc\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import Image, display\n",
     "from langgraph.graph import StateGraph, START\n",
@@ -273,8 +299,9 @@
     "workflow.add_edge(\"summarize_conversation\", END)\n",
     "\n",
     "# Compile\n",
-    "graph = workflow.compile(checkpointer=memory)\n",
-    "display(Image(graph.get_graph().draw_mermaid_png()))"
+    "graph = workflow.compile(checkpointer=memory) # this is where we add the memory itself\n",
+    "#display(Image(graph.get_graph().draw_mermaid_png()))\n",
+    "print(graph.get_graph().draw_mermaid())"
    ]
   },
   {
@@ -287,10 +314,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0f4094a0-d240-4be8-903a-7d9f605bdc5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Hello Lance! It's nice to meet you again. You mentioned you like the 49ers. Is there anything specific about them you'd like to chat about?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is Lance. You've introduced yourself a couple of times already!\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "That's great, Lance! The San Francisco 49ers are a storied franchise.\n",
+      "\n",
+      "Would you like to talk about:\n",
+      "\n",
+      "*   **Their current roster?** We could discuss some of their star players.\n",
+      "*   **Their history?** They have a rich past with many Super Bowl wins.\n",
+      "*   **Memorable games?** There are quite a few iconic matchups to choose from.\n",
+      "*   **Their prospects for the upcoming season?**\n",
+      "*   **Their rivalries?**\n",
+      "*   **Their stadium?**\n",
+      "\n",
+      "Let me know what interests you!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a thread\n",
     "config = {\"configurable\": {\"thread_id\": \"1\"}}\n",
@@ -322,10 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d2ab158a-5a82-417a-8841-730a4cc18ea7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StateSnapshot(values={'messages': [HumanMessage(content=\"hi! I'm Lance\", additional_kwargs={}, response_metadata={}, id='3c2b6d70-26f0-42d8-93ae-e2756c75b45a'), AIMessage(content=\"Hello Lance! It's nice to meet you again. You mentioned you like the 49ers. Is there anything specific about them you'd like to chat about?\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--a18ba96a-a263-4f72-8f32-b152a1a21738-0', usage_metadata={'input_tokens': 350, 'output_tokens': 36, 'total_tokens': 386, 'input_token_details': {'cache_read': 0}}), HumanMessage(content=\"what's my name?\", additional_kwargs={}, response_metadata={}, id='fb1925a0-b911-4c6e-b4ef-a680bd79ee99'), AIMessage(content=\"Your name is Lance. You've introduced yourself a couple of times already!\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--9e2f505f-bd92-494d-a283-f7806929de3a-0', usage_metadata={'input_tokens': 333, 'output_tokens': 16, 'total_tokens': 349, 'input_token_details': {'cache_read': 0}}), HumanMessage(content='i like the 49ers!', additional_kwargs={}, response_metadata={}, id='8288508a-88c7-4b43-b2e7-fe99082f7fd1'), AIMessage(content=\"That's great, Lance! The San Francisco 49ers are a storied franchise.\\n\\nWould you like to talk about:\\n\\n*   **Their current roster?** We could discuss some of their star players.\\n*   **Their history?** They have a rich past with many Super Bowl wins.\\n*   **Memorable games?** There are quite a few iconic matchups to choose from.\\n*   **Their prospects for the upcoming season?**\\n*   **Their rivalries?**\\n*   **Their stadium?**\\n\\nLet me know what interests you!\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--98c1fc50-dd30-496e-a1c3-3548e25a3efa-0', usage_metadata={'input_tokens': 359, 'output_tokens': 121, 'total_tokens': 480, 'input_token_details': {'cache_read': 0}})], 'summary': 'Okay, Lance! Let\\'s extend the summary to include our latest interaction.\\n\\n**Here\\'s a summary of the conversation to date:**\\n\\nLance introduced himself twice during the conversation. He expressed his fondness for the San Francisco 49ers football team. The AI assistant acknowledged Lance\\'s name each time and showed willingness to discuss the 49ers, offering to talk about various aspects of the team such as their history, current roster, or memorable games. The conversation was brief and somewhat repetitive, with Lance reintroducing himself at the end without directly responding to the AI\\'s questions or prompts about the 49ers.\\n\\n**Extension based on new messages:**\\n\\nLance has now introduced himself for a third time, reiterating \"hi! I\\'m Lance.\" Following this, he asked \"what\\'s my name?\" The AI assistant correctly identified his name as Lance, noting that he had introduced himself twice previously. Lance then stated, \"i like the 49ers!\" The AI assistant acknowledged this interest and offered several specific topics related to the 49ers for discussion, such as their roster, history, memorable games, upcoming season prospects, rivalries, and stadium. The conversation remains focused on Lance\\'s introduction and his stated interest in the 49ers, with the AI actively trying to steer the discussion towards more detailed engagement.'}, next=(), config={'configurable': {'thread_id': '1', 'checkpoint_ns': '', 'checkpoint_id': '1f0d41b2-4c0f-6098-801b-91bb85876495'}}, metadata={'source': 'loop', 'step': 27, 'parents': {}}, created_at='2025-12-08T09:49:09.431516+00:00', parent_config={'configurable': {'thread_id': '1', 'checkpoint_ns': '', 'checkpoint_id': '1f0d41b2-3f43-6a04-801a-51252c6df7bb'}}, tasks=(), interrupts=())"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config = {\"configurable\": {\"thread_id\": \"1\"}}\n",
     "graph_state = graph.get_state(config)\n",
@@ -346,10 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b9a44dc5-be04-45fa-a6fc-27b0f8ee4678",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StateSnapshot(values={'messages': [HumanMessage(content=\"hi! I'm Lance\", additional_kwargs={}, response_metadata={}, id='3c2b6d70-26f0-42d8-93ae-e2756c75b45a'), AIMessage(content=\"Hello Lance! It's nice to meet you again. You mentioned you like the 49ers. Is there anything specific about them you'd like to chat about?\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--a18ba96a-a263-4f72-8f32-b152a1a21738-0', usage_metadata={'input_tokens': 350, 'output_tokens': 36, 'total_tokens': 386, 'input_token_details': {'cache_read': 0}}), HumanMessage(content=\"what's my name?\", additional_kwargs={}, response_metadata={}, id='fb1925a0-b911-4c6e-b4ef-a680bd79ee99'), AIMessage(content=\"Your name is Lance. You've introduced yourself a couple of times already!\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--9e2f505f-bd92-494d-a283-f7806929de3a-0', usage_metadata={'input_tokens': 333, 'output_tokens': 16, 'total_tokens': 349, 'input_token_details': {'cache_read': 0}}), HumanMessage(content='i like the 49ers!', additional_kwargs={}, response_metadata={}, id='8288508a-88c7-4b43-b2e7-fe99082f7fd1'), AIMessage(content=\"That's great, Lance! The San Francisco 49ers are a storied franchise.\\n\\nWould you like to talk about:\\n\\n*   **Their current roster?** We could discuss some of their star players.\\n*   **Their history?** They have a rich past with many Super Bowl wins.\\n*   **Memorable games?** There are quite a few iconic matchups to choose from.\\n*   **Their prospects for the upcoming season?**\\n*   **Their rivalries?**\\n*   **Their stadium?**\\n\\nLet me know what interests you!\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--98c1fc50-dd30-496e-a1c3-3548e25a3efa-0', usage_metadata={'input_tokens': 359, 'output_tokens': 121, 'total_tokens': 480, 'input_token_details': {'cache_read': 0}})], 'summary': 'Okay, Lance! Let\\'s extend the summary to include our latest interaction.\\n\\n**Here\\'s a summary of the conversation to date:**\\n\\nLance introduced himself twice during the conversation. He expressed his fondness for the San Francisco 49ers football team. The AI assistant acknowledged Lance\\'s name each time and showed willingness to discuss the 49ers, offering to talk about various aspects of the team such as their history, current roster, or memorable games. The conversation was brief and somewhat repetitive, with Lance reintroducing himself at the end without directly responding to the AI\\'s questions or prompts about the 49ers.\\n\\n**Extension based on new messages:**\\n\\nLance has now introduced himself for a third time, reiterating \"hi! I\\'m Lance.\" Following this, he asked \"what\\'s my name?\" The AI assistant correctly identified his name as Lance, noting that he had introduced himself twice previously. Lance then stated, \"i like the 49ers!\" The AI assistant acknowledged this interest and offered several specific topics related to the 49ers for discussion, such as their roster, history, memorable games, upcoming season prospects, rivalries, and stadium. The conversation remains focused on Lance\\'s introduction and his stated interest in the 49ers, with the AI actively trying to steer the discussion towards more detailed engagement.'}, next=(), config={'configurable': {'thread_id': '1', 'checkpoint_ns': '', 'checkpoint_id': '1f0d41b2-4c0f-6098-801b-91bb85876495'}}, metadata={'source': 'loop', 'step': 27, 'parents': {}}, created_at='2025-12-08T09:49:09.431516+00:00', parent_config={'configurable': {'thread_id': '1', 'checkpoint_ns': '', 'checkpoint_id': '1f0d41b2-3f43-6a04-801a-51252c6df7bb'}}, tasks=(), interrupts=())"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a thread\n",
     "config = {\"configurable\": {\"thread_id\": \"1\"}}\n",
@@ -401,7 +477,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lc-academy-env",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
